--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </head>
     <body>
       <script src="sketch.js"></script>
-      <script src="js/Food.js"></script>
+      <script src="Food.js"></script>
 
     </body>
   </html>
